update to new launch scripts structure